--- a/site_files/index.html
+++ b/site_files/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <h1> <span id="my-demo">Hello Airwalk!</span></h1>
-        <p>Hello World!</p>
+        <p>And Hello World!</p>
         <button onclick="myFunction()">Click me</button>
     </body>
 </html>
